# mbti-personality-classification

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
